--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -21,5 +21,16 @@
             <button>Contact Us</button>
         </div>    
     </header>
+    <div class="head_line">
+        <div class="head_tex">
+            <p class="head"><span>“Ride the Wave of Success with</span><br>
+            Nile Digital Solutions”</p>
+            <p class="subhead">“Welcome to Nile Digital Solution, your partner and where innovation<br>
+                meets excellence in the digital world!”</p>
+            <button>Get In Touch</button>
+        </div>
+        <img src="./images/headline.jpeg" alt="headline">
+    
+    </div>
 </body>
 </html>
