our service section

--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -30,7 +30,35 @@
             <button>Get In Touch</button>
         </div>
         <img src="./images/headline.jpeg" alt="headline">
-    
+    </div>
+    <div class="services">
+        <h1>Our <span>Services</span></h1>
+        <div class="service_card">
+            <div class="devops">
+                <img src="./images/devops.jpeg" alt="Development">
+                <h3>Web Development and Operation ></h3>
+            </div>
+            <div class="ui_ux">
+                <img src="./images/Userdesign.jpeg" alt="UI/UX Design">
+                <h3>UI/UX Design ></h3>
+            </div>
+            <div class="appdev">
+                <img src="./images/softdevlop.jpeg" alt="software Development">
+                <h3>Mobile App and Software Development ></h3>
+            </div>
+            <div class="digitalM">
+                <img src="./images/digitalM.jpeg" alt="Digital Marketing">
+                <h3>Digital Marketing</h3>
+            </div>
+            <!-- <div class="Data Analysis">
+                <img src="./images/Data Analysis.jpeg" alt="Data Analysis">
+                <h3>Data Analysis</h3>
+            </div> -->
+            <!-- <div class="seo">
+                <img src="./images/SEO.jpeg" alt="SEO">
+                <h3>Search Engine Optimazation</h3>
+            </div> -->
+        </div>
     </div>
 </body>
 </html>
