i dont know what i changed

--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -46,10 +46,10 @@
                 <img src="./images/softdevlop.jpeg" alt="software Development">
                 <h3>Mobile App and Software Development ></h3>
             </div>
-            <div class="digitalM">
+            <!-- <div class="digitalM">
                 <img src="./images/digitalM.jpeg" alt="Digital Marketing">
                 <h3>Digital Marketing</h3>
-            </div>
+            </div> -->
             <!-- <div class="Data Analysis">
                 <img src="./images/Data Analysis.jpeg" alt="Data Analysis">
                 <h3>Data Analysis</h3>
