--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -46,18 +46,18 @@
                 <img src="./images/softdevlop.jpeg" alt="software Development">
                 <h3>Mobile App and Software Development ></h3>
             </div>
-            <!-- <div class="digitalM">
+            <div class="digitalM">
                 <img src="./images/digitalM.jpeg" alt="Digital Marketing">
-                <h3>Digital Marketing</h3>
-            </div> -->
-            <!-- <div class="Data Analysis">
+                <h3>Digital Marketing ></h3>
+            </div>
+            <div class="Data_Analysis">
                 <img src="./images/Data Analysis.jpeg" alt="Data Analysis">
-                <h3>Data Analysis</h3>
-            </div> -->
-            <!-- <div class="seo">
+                <h3>Data Analysis ></h3>
+            </div>
+            <div class="seo">
                 <img src="./images/SEO.jpeg" alt="SEO">
-                <h3>Search Engine Optimazation</h3>
-            </div> -->
+                <h3>Search Engine Optimazation ></h3>
+            </div>
         </div>
     </div>
 </body>
