--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -32,7 +32,7 @@
         <img src="./images/headline.jpeg" alt="headline">
     </div>
     <div class="services">
-        <h1>Our <span>Services</span></h1>
+        <h1><span>Services</span></h1>
         <div class="service_card">
             <div class="devops">
                 <img src="./images/devops.jpeg" alt="Development">
