start pic added

--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -59,6 +59,9 @@
                 <h3>Search Engine Optimazation ></h3>
             </div>
         </div>
+        <div class="start">
+            <img src="./images/start.jpeg" alt="start Now">
+        </div>
     </div>
 </body>
 </html>
