--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -63,5 +63,53 @@
             <img src="./images/start.jpeg" alt="start Now">
         </div>
     </div>
+    <div class="benefits">
+        <h1>benefits Of Our Services</h1>
+        <div class="description">
+            <div>
+                <h2>Tailored Solutions</h2>
+                <p>We understand that every business is<br>
+                    unique. By partnering with Nile Digital<br> 
+                   Solution, clients can expect customized<br>
+                    solutions tailored to their specific goals,<br> 
+                   challenges, and industry dynamics.</p>
+            </div>
+            <div>
+                <h2>Increased Online Visibility</h2>
+                <p>Our strategic approach to digital marketing,<br>
+                   SEO, and PPC advertising helps clients increase<br>
+                   their online visibility, attract more qualified leads,<br>
+                   and outshine competitors in the digital space.</p>
+            </div>
+            <div>
+                <h2>Increased Online Visibility</h2>
+                <p>Our strategic approach to digital marketing,<br>
+                   SEO, and PPC advertising helps clients increase<br>
+                   their online visibility, attract more qualified leads,<br>
+                   and outshine competitors in the digital space.</p>
+            </div>
+            <div>
+                <h2>Increased Online Visibility</h2>
+                <p>Our strategic approach to digital marketing,<br>
+                   SEO, and PPC advertising helps clients increase<br>
+                   their online visibility, attract more qualified leads,<br>
+                   and outshine competitors in the digital space.</p>
+            </div>
+            <div>
+                <h2>Increased Online Visibility</h2>
+                <p>Our strategic approach to digital marketing,<br>
+                   SEO, and PPC advertising helps clients increase<br>
+                   their online visibility, attract more qualified leads,<br>
+                   and outshine competitors in the digital space.</p>
+            </div>
+            <div>
+                <h2>Increased Online Visibility</h2>
+                <p>Our strategic approach to digital marketing,<br>
+                   SEO, and PPC advertising helps clients increase<br>
+                   their online visibility, attract more qualified leads,<br>
+                   and outshine competitors in the digital space.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
