--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -82,25 +82,31 @@
                    and outshine competitors in the digital space.</p>
             </div>
             <div>
-                <h2>Increased Online Visibility</h2>
-                <p>Our strategic approach to digital marketing,<br>
-                   SEO, and PPC advertising helps clients increase<br>
-                   their online visibility, attract more qualified leads,<br>
-                   and outshine competitors in the digital space.</p>
+                <h2>Enhanced Brand Awareness</h2>
+                <p>Through compelling content creation,<br> 
+                    engaging social media strategies, and<br>
+                    eye-catching website design, we help clients<br>
+                    enhance their brand awareness and leave<br>
+                     a memorable impression on their<br>
+                     target audience.</p>
             </div>
             <div>
-                <h2>Increased Online Visibility</h2>
-                <p>Our strategic approach to digital marketing,<br>
-                   SEO, and PPC advertising helps clients increase<br>
-                   their online visibility, attract more qualified leads,<br>
-                   and outshine competitors in the digital space.</p>
+                <h2>Continuous Improvement</h2>
+                <p>The digital landscape is constantly evolving.<br>
+                    Clients can trust Nile Digital Solution to stay<br>
+                    ahead of the curve, keeping their strategies<br>
+                    fresh, innovative, and aligned with the latest<br>
+                    industry trends and best practices.</p>
             </div>
             <div>
-                <h2>Increased Online Visibility</h2>
-                <p>Our strategic approach to digital marketing,<br>
-                   SEO, and PPC advertising helps clients increase<br>
-                   their online visibility, attract more qualified leads,<br>
-                   and outshine competitors in the digital space.</p>
+                <h2>Expert Guidance</h2>
+                <p>With a team of experienced professionals<br>
+                    at your disposal, clients can expect expert<br>
+                    guidance and support every step of the way.<br>
+                    Whether you're launching a new campaign<br>
+                    or optimizing your existing digital assets,<br>
+                    we're here to provide the expertise<br>
+                    and insight you need to succeed.</p>
             </div>
             <div>
                 <h2>Increased Online Visibility</h2>
