--- a/web_static/Homepage.html
+++ b/web_static/Homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nile Agency</title>
     <link rel="stylesheet" href="./style/homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -117,5 +118,16 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="brand_name">
+            <h3>Nile Digital Solution</h3>
+        </div>
+        <div class="social_media">
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+        </div>
+    </div> 
 </body>
 </html>
