--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,16 +6,17 @@
     <title>Nile Agency</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light menu">
+    <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><h1>Nile Agency</h1>
+          <a class="navbar-brand" href="#"><h1 style="color: white;">Nile Agency</h1>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -35,8 +36,38 @@
           </div>
         </div>
       </nav>
+      <!-- INTRODUCTION SECTION -->
+      <section id="home" class="intro-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6 intros">
+              <h1 class="display-2">
+                <span class="display-2--intro">
+                  “Ride the Wave of Success with Nile Digital Solutions”
+                </span>
+                <span class="display-2--description lh-base">
+                  “Welcome to Nile Digital Solution,
+                  your partner and where innovation
+                  meets excellence in the digital world!”
+                </span>
+              </h1>
+              <button type="button" class="rounded-pill btn-rounded">Get In Touch
+                <span>
+                  <i class="fa-solid fa-door-open"></i>
+                </span>
+              </button>
+            </div>
+            <div class="col-md-6 intros">
+              <div class="box">
+                <img src="./images/image-intro.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,213.3C96,235,192,277,288,250.7C384,224,480,128,576,117.3C672,107,768,181,864,202.7C960,224,1056,192,1152,186.7C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
