--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -66,6 +66,68 @@
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,213.3C96,235,192,277,288,250.7C384,224,480,128,576,117.3C672,107,768,181,864,202.7C960,224,1056,192,1152,186.7C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
+      <!-- OUR SERVICES SECTION -->
+      <section class="our-service">
+        <div class="container">
+          <div class="row text-center mb-5">
+            <h1 class="display-3 fw-bold">OUR SERVICES</h1>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./images/services/pic1.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="rounded-pill btn-rounded">Learn More
+                      <span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                      </span>
+                    </button>
+                    <p class="display-3">Web Development And Operation</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/services/pic2.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="rounded-pill btn-rounded">Learn More
+                      <span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                      </span>
+                    </button>
+                    <p class="display-3">Digital Marketing</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/services/pic3.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="rounded-pill btn-rounded">Learn More
+                      <span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                      </span>
+                    </button>
+                    <p class="display-3">Website Design</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
