--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -80,6 +80,8 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -115,6 +117,28 @@
                     <p class="display-3">Website Design</p>
                   </div>
                 </div>
+                <div class="carousel-item">
+                  <img src="./images/services/pic4.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="rounded-pill btn-rounded">Learn More
+                      <span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                      </span>
+                    </button>
+                    <p class="display-3">Software Development</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./images/services/pic5.jpg" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="rounded-pill btn-rounded">Learn More
+                      <span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                      </span>
+                    </button>
+                    <p class="display-3">Data Analysis</p>
+                  </div>
+                </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -128,7 +152,107 @@
           </div>
         </div>
       </section>
+      <section class="Benefits mt-5">
+        <div class="container">
+          <div class="row text-center">
+            <h1 class="display-3 fw-bold text-uppercase">  Benefits of Working with Us
+            </h1>
+            <div class="row mt-5">
+              <div class="col-md-12">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item shadow mb-3">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Tailored Solutions
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                      <div class="accordion-body fs-1">
+                        We understand that every business is
+                        unique. By partnering with Nile Digital 
+                        Solution, clients can expect customized
+                        solutions tailored to their specific goals, 
+                        challenges, and industry dynamics.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item shadow mb-3">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Enhanced Brand Awareness
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body fs-1">
+                        Through compelling content creation, 
+                        engaging social media strategies, and 
+                        eye-catching website design, we help clients
+                        enhance their brand awareness and leave
+                        a memorable impression on their
+                        target audience.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item shadow mb-3">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Continuous Improvement
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body fs-1">
+                        The digital landscape is constantly evolving.
+                        Clients can trust Nile Digital Solution to stay
+                        ahead of the curve, keeping their strategies
+                        fresh, innovative, and aligned with the latest
+                        industry trends and best practices.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item shadow mb-3">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Increased Online Visibility
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body fs-1">
+                        Our strategic approach to digital marketing, SEO, and PPC advertising helps clients increase their online visibility, attract more qualified leads, and outshine competitors in the digital space.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item shadow mb-3">
+                    <h2 class="accordion-header">
+                      <button class="accordion-button collapsed fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        Expert Guidance
+                      </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                      <div class="accordion-body fs-1">
+                        With a team of experienced professionals
+                        at your disposal, clients can expect expert
+                        guidance and support every step of the way.
+                        Whether you're launching a new campaign
+                        or optimizing your existing digital assets,
+                        we're here to provide the expertise
+                        and insight you need to succeed.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="testimonials">
+        <div class="container">
+          <div class="row text-center mt-5">
+            <h1 class="display-3 fw-bold">Testimonials</h1>
+          </div>
+        </div>
 
+      </section>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
