--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -246,11 +246,121 @@
         </div>
       </section>
       <section class="testimonials">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L40,122.7C80,149,160,203,240,229.3C320,256,400,256,480,245.3C560,235,640,213,720,181.3C800,149,880,107,960,112C1040,117,1120,171,1200,181.3C1280,192,1360,160,1400,144L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
         <div class="container">
-          <div class="row text-center mt-5">
+          <div class="row text-center mt-5 text-white">
             <h1 class="display-3 fw-bold">Testimonials</h1>
+            <p class="lead mt-3">what our clients are saying</p>
+          </div>
+          <div class="row align-items-center">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                  </div>
+                  <div class="testimonials__picture">
+                    <img src="./images/testimonialsa/test-1.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="testimonials__name">
+                    <h3>Jimmy fallen</h3>
+                    <p class="fw-light">Marketing Manager</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                  </div>
+                  <div class="testimonials__picture">
+                    <img src="./images/testimonialsa/test-2.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="testimonials__name">
+                    <h3>James Bond</h3>
+                    <p class="fw-light">CEo and Founder</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                  </div>
+                  <div class="testimonials__picture">
+                    <img src="./images/testimonialsa/test-3.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="testimonials__name">
+                    <h3>Tony Stark</h3>
+                    <p class="fw-light">Finance Manager</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="testimonials__card">
+                  <p class="lh-lg">
+                    <i class="fas fa-quote-left"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
+                    <i class="fas fa-quote-right"></i>
+                    <div class="ratings">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </p>
+                  </div>
+                  <div class="testimonials__picture">
+                    <img src="./images/testimonialsa/test-4.jpg" alt="" class="img-fluid">
+                  </div>
+                  <div class="testimonials__name">
+                    <h3>Arnold Shewazinger</h3>
+                    <p class="fw-light">global marketing agent</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
           </div>
         </div>
+      </section>
+      <section class="get-started">
 
       </section>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
