--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -246,105 +246,112 @@
         </div>
       </section>
       <section class="testimonials">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L40,122.7C80,149,160,203,240,229.3C320,256,400,256,480,245.3C560,235,640,213,720,181.3C800,149,880,107,960,112C1040,117,1120,171,1200,181.3C1280,192,1360,160,1400,144L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L48,138.7C96,149,192,171,288,154.7C384,139,480,85,576,90.7C672,96,768,160,864,208C960,256,1056,288,1152,266.7C1248,245,1344,171,1392,133.3L1440,96L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
         <div class="container">
-          <div class="row text-center mt-5 text-white">
+          <div class="row text-center">
             <h1 class="display-3 fw-bold">Testimonials</h1>
-            <p class="lead mt-3">what our clients are saying</p>
           </div>
           <div class="row align-items-center">
-            <div id="carouselExampleCaptions" class="carousel slide">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
+                <!-- TESTIMONIALS-1 -->
                 <div class="carousel-item active">
                   <div class="testimonials__card">
-                  <p class="lh-lg">
-                    <i class="fas fa-quote-left"></i>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
-                    <i class="fas fa-quote-right"></i>
-                    <div class="ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                  </p>
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus, ab! Molestias harum consequatur architecto facilis rerum esse tempore sapiente veritatis dolore.
+                      <i class="fas fa-quote-right"></i>
+                      <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
                   </div>
-                  <div class="testimonials__picture">
+                  <!-- <div class="testimonials__picture">
                     <img src="./images/testimonialsa/test-1.jpg" alt="" class="img-fluid">
-                  </div>
-                  <div class="testimonials__name">
-                    <h3>Jimmy fallen</h3>
-                    <p class="fw-light">Marketing Manager</p>
+                  </div> -->
+                  <div class="testimonials__name text-center">
+                    <h3>Tom Cruise</h3>
+                    <p>Marketing Manger</p>
                   </div>
                 </div>
+                <!-- TESTIMONIALS-2 -->
                 <div class="carousel-item">
                   <div class="testimonials__card">
-                  <p class="lh-lg">
-                    <i class="fas fa-quote-left"></i>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
-                    <i class="fas fa-quote-right"></i>
-                    <div class="ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                  </p>
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus, ab! Molestias harum consequatur architecto facilis rerum esse tempore sapiente veritatis dolore.
+                      <i class="fas fa-quote-right"></i>
+                      <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
                   </div>
-                  <div class="testimonials__picture">
+                  <!-- <div class="testimonials__picture">
                     <img src="./images/testimonialsa/test-2.jpg" alt="" class="img-fluid">
-                  </div>
-                  <div class="testimonials__name">
-                    <h3>James Bond</h3>
-                    <p class="fw-light">CEo and Founder</p>
+                  </div> -->
+                  <div class="testimonials__name text-center">
+                    <h3>Jems ward</h3>
+                    <p>CEO and Founder</p>
                   </div>
                 </div>
+                <!-- TESTIMONIALS-3 -->
                 <div class="carousel-item">
                   <div class="testimonials__card">
-                  <p class="lh-lg">
-                    <i class="fas fa-quote-left"></i>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
-                    <i class="fas fa-quote-right"></i>
-                    <div class="ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                  </p>
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus, ab! Molestias harum consequatur architecto facilis rerum esse tempore sapiente veritatis dolore.
+                      <i class="fas fa-quote-right"></i>
+                      <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
                   </div>
-                  <div class="testimonials__picture">
+                  <!-- <div class="testimonials__picture">
                     <img src="./images/testimonialsa/test-3.jpg" alt="" class="img-fluid">
-                  </div>
-                  <div class="testimonials__name">
+                  </div> -->
+                  <div class="testimonials__name text-center">
                     <h3>Tony Stark</h3>
-                    <p class="fw-light">Finance Manager</p>
+                    <p>Stark Industries</p>
                   </div>
                 </div>
+                <!-- TESTIMONIALS-4 -->
                 <div class="carousel-item">
                   <div class="testimonials__card">
-                  <p class="lh-lg">
-                    <i class="fas fa-quote-left"></i>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas fuga, qui pariatur earum inventore quisquam alias quos, deleniti iure, eligendi autem.
-                    <i class="fas fa-quote-right"></i>
-                    <div class="ratings">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
-                  </p>
+                    <p class="lh-lg">
+                      <i class="fas fa-quote-left"></i>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Delectus, ab! Molestias harum consequatur architecto facilis rerum esse tempore sapiente veritatis dolore.
+                      <i class="fas fa-quote-right"></i>
+                      <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                    </p>
                   </div>
-                  <div class="testimonials__picture">
+                  <!-- <div class="testimonials__picture">
                     <img src="./images/testimonialsa/test-4.jpg" alt="" class="img-fluid">
-                  </div>
-                  <div class="testimonials__name">
-                    <h3>Arnold Shewazinger</h3>
-                    <p class="fw-light">global marketing agent</p>
+                  </div> -->
+                  <div class="testimonials__name text-center">
+                    <h3>John Cina</h3>
+                    <p>global marketing agent</p>
                   </div>
                 </div>
               </div>
@@ -361,8 +368,56 @@
         </div>
       </section>
       <section class="get-started">
-
+        <div class="container">
+          <div class="row text-center align-items-center">
+            <h1 class="display-3 fw-bold">
+              Get Started
+            </h1>
+            <p class="display-4">
+              <i class="fas fa-quote-left"></i>
+              Ready to Elevate Your Digital Presence? Schedule a Free Consultation Today!
+              <i class="fas fa-quote-right"></i>
+            </p>
+            <div class="btn">
+              <button type="button" class="rounded-pill btn-anime">Get Started
+              </button>
+              <span class="border-animation border-animation--border-1"></span>
+              <span class="border-animation border-animation--border-2"></span>
+            </div>
+          </div>
+        </div>
       </section>
+      <!-- FOOOTER SECTION -->
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <!-- whatsup number -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1">
+              <div class="contact-box__icon"></div>
+              <div class="contact-box __info">
+                <a href="" class="contact-box__info--title">title</a>
+                <p class="contact-box __info--subtite">subtitle</p>
+              </div>
+            </div>
+            <!-- for email -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1">
+              <div class="contact-box__icon"></div>
+              <div class="contact-box __info">
+                <a href="" class="contact-box__info--title">title</a>
+                <p class="contact-box __info--subtite">subtitle</p>
+              </div>
+            </div>
+            <!-- for address -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1">
+              <div class="contact-box__icon"></div>
+              <div class="contact-box __info">
+                <a href="" class="contact-box__info--title">title</a>
+                <p class="contact-box __info--subtite">subtitle</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
