--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -388,31 +388,91 @@
         </div>
       </section>
       <!-- FOOOTER SECTION -->
-      <footer class="footer">
+      <footer class="footer shadow">
         <div class="container">
           <div class="row">
             <!-- whatsup number -->
-            <div class="col-md-4 col-lg-4 contact-box pt-1">
-              <div class="contact-box__icon"></div>
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                  <path d="M15 7a2 2 0 0 1 2 2" />
+                  <path d="M15 3a6 6 0 0 1 6 6" />
+                </svg>
+              </div>
               <div class="contact-box __info">
-                <a href="" class="contact-box__info--title">title</a>
-                <p class="contact-box __info--subtite">subtitle</p>
+                <a href="" class="contact-box__info__title">+123456789</a>
+                <p class="contact-box __info__subtite">Mon-Fri 9am-6pm</p>
               </div>
             </div>
-            <!-- for email -->
-            <div class="col-md-4 col-lg-4 contact-box pt-1">
-              <div class="contact-box__icon"></div>
+            <!-- Email -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
+                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+                  <path d="M3 19l6 -6" />
+                  <path d="M15 13l6 6" />
+                </svg>
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                  <path d="M15 7a2 2 0 0 1 2 2" />
+                  <path d="M15 3a6 6 0 0 1 6 6" />
+                </svg>
+              </div>
               <div class="contact-box __info">
-                <a href="" class="contact-box__info--title">title</a>
-                <p class="contact-box __info--subtite">subtitle</p>
+                <a href="" class="contact-box__info__title">info@nileagency.com</a>
+                <p class="contact-box __info__subtite">Online Support</p>
               </div>
             </div>
-            <!-- for address -->
-            <div class="col-md-4 col-lg-4 contact-box pt-1">
-              <div class="contact-box__icon"></div>
+            <!-- Address -->
+            <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+              <div class="contact-box__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" />
+                  <path d="M9 4v13" />
+                  <path d="M15 7v5.5" />
+                  <path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" />
+                  <path d="M19 18v.01" />
+                </svg>
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+                  <path d="M15 7a2 2 0 0 1 2 2" />
+                  <path d="M15 3a6 6 0 0 1 6 6" />
+                </svg>
+              </div>
               <div class="contact-box __info">
-                <a href="" class="contact-box__info--title">title</a>
-                <p class="contact-box __info--subtite">subtitle</p>
+                <a href="" class="contact-box__info__title">Addis Abeba, Ethiopia</a>
+                <p class="contact-box __info__subtite">Bole Road</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-sm" style="background-color: #212121;">
+          <div class="container">
+            <div class="row py-4 text-center text-white">
+              <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+                connect with our social media
+              </div>
+              <div class="col-lg-7 col-md-6">
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-github"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom pt-5 pb-5">
+          <div class="container">
+            <div class="row text-center text-white">
+              <div class="col-12">
+                <div class="footer-bottom__copyright">
+                  &copy; 2024 Nile Agency. All Rights Reserved.
+                </div>
               </div>
             </div>
           </div>
