--- a/bootstrap/services.html
+++ b/bootstrap/services.html
@@ -193,7 +193,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <div class="btn">
-              <button type="button" class="rounded-pill btn-anime">Let's Work
+              <button type="button" class="rounded-pill btn-anime">Let's Discuss
               </button>
               <span class="border-animation border-animation--border-1"></span>
               <span class="border-animation border-animation--border-2"></span>
