--- a/bootstrap/services.html
+++ b/bootstrap/services.html
@@ -184,9 +184,9 @@
       <section class="get-started">
         <div class="container">
           <div class="row text-center align-items-center">
-            <h1 class="display-3 fw-bold">
+            <!-- <h1 class="display-3 fw-bold">
               Get Started
-            </h1>
+            </h1> -->
             <p class="display-4">
               <i class="fas fa-quote-left"></i>
               Do you have a project or an idea to discuss?
