--- a/bootstrap/ContactUs.html
+++ b/bootstrap/ContactUs.html
@@ -98,6 +98,10 @@
                 <div class="mb-3">
                   <textarea name="message" placeholder="message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
                 </div>
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                  <label class="form-check-label text-black" for="flexSwitchCheckDefault">Do you need Appointment Date</label>
+                </div>
                 <div class="text-center d-grid mt-1">
                   <button class="btn btn-primary rounded-pill pt-3 pb-3">
                     submit
