Fixing Carousel Images Fixing all  Errors on index.html Formatting About US Page

--- a/bootstrap/AboutUs.html
+++ b/bootstrap/AboutUs.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AboutUs</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="#"><h1 style="color: white;" href="./index.html">Nile Agency</h1>
+      <div class="container">
+        <a class="navbar-brand" href="#"
+          ><h1 style="color: white" href="./index.html">Nile Agency</h1>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./AboutUs.html">About Us</a>
+            </li>
+          </ul>
+          <a href="./ContactUs.html">
+            <button
+              type="button"
+              class="rounded-pill btn-rounded"
+              href="./ContactUs.html"
+            >
+              Contact Us
+              <span>
+                <i class="fas fa-arrow-right"></i>
+              </span>
+            </button>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./AboutUs.html">About Us</a>
-              </li>
-            </ul>
-            <a href="./ContactUs.html">
-              <button type="button" class="rounded-pill btn-rounded" href="./ContactUs.html">Contact Us
-                <span>
-                  <i class="fas fa-arrow-right"></i>
-                </span>
-              </button>
-            </a>
-          </div>
         </div>
+      </div>
     </nav>
-</body>
+  </body>
 </html>
