--- a/bootstrap/ContactUs.html
+++ b/bootstrap/ContactUs.html
@@ -1,62 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ContactUs</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="./index.html"><h1 style="color: white;">Nile Agency</h1>
+      <div class="container">
+        <a class="navbar-brand" href="../index.html"
+          ><h1 style="color: white">Nile Agency</h1>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./ContactUs.html"> Contact Us</a>
+            </li>
+          </ul>
+          <a
+            href="https://karem1035.github.io/ALX-Web-Development-Agency-Landing-Page/"
+            target="_blank"
+          >
+            <button type="button" class="rounded-pill btn-rounded">
+              More Info
+
+              <span>
+                <i class="fas fa-arrow-right"></i>
+              </span>
+            </button>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./services.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./AboutUs.html">About Us</a>
-              </li>
-            </ul>
-            <a href="./ContactUs.html">
-              <button type="button" class="rounded-pill btn-rounded">Contact Us
-                <span>
-                  <i class="fas fa-arrow-right"></i>
-                </span>
-              </button>
-            </a>
-          </div>
         </div>
+      </div>
     </nav>
     <!-- INTRODUCTION SECTION -->
     <section id="home" class="intro-section">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-12 intros">
-                    <h1 class="display-2">
-                        <span class="display-2--intro">
-                            Contact
-                        </span>
-                        <span class="display-2--description lh-base">
-                            Let’s get started! Please fill in the form below
-                            so we can learn more about you and your project
-                            or just schedule a call.
-                        </span>
-                    </h1>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-12 intros">
+            <h1 class="display-2">
+              <span class="display-2--intro"> Contact </span>
+              <span class="display-2--description lh-base">
+                Let’s get started! Please fill in the form below so we can learn
+                more about you and your project or just schedule a call.
+              </span>
+            </h1>
+          </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,192L48,213.3C96,235,192,277,288,250.7C384,224,480,128,576,117.3C672,107,768,181,864,202.7C960,224,1056,192,1152,186.7C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,192L48,213.3C96,235,192,277,288,250.7C384,224,480,128,576,117.3C672,107,768,181,864,202.7C960,224,1056,192,1152,186.7C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <section class="contactus-form">
       <div class="container">
@@ -71,7 +99,9 @@
                 We elevate Your Business to the Next Level
               </h4>
               <p class="lh-lg">
-                We are a team of talented individuals who are passionate about helping businesses grow. We are here to help you elevate your business to the next level.
+                We are a team of talented individuals who are passionate about
+                helping businesses grow. We are here to help you elevate your
+                business to the next level.
               </p>
               <h3 class="display-3--brief">what will be the next step?</h3>
               <ul class="cta-info__list">
@@ -86,23 +116,58 @@
               <h4 class="display-3--title mb-5">Fill The Form</h4>
               <form action="#" class="row">
                 <div class="mb-3">
-                  <input type="text" placeholder="First Name" id="inputFirstName" class="shadow form-control form-control-lg">
+                  <input
+                    type="text"
+                    placeholder="First Name"
+                    id="inputFirstName"
+                    class="shadow form-control form-control-lg"
+                  />
                 </div>
                 <div class="mb-3">
-                  <input type="text" placeholder="Last Name" id="inputLastName" class="shadow form-control form-control-lg">
+                  <input
+                    type="text"
+                    placeholder="Last Name"
+                    id="inputLastName"
+                    class="shadow form-control form-control-lg"
+                  />
                 </div>
                 <div class="mb-3">
-                  <input type="email" placeholder="Email" id="inputemail" class="shadow form-control form-control-lg">
+                  <input
+                    type="email"
+                    placeholder="Email"
+                    id="inputemail"
+                    class="shadow form-control form-control-lg"
+                  />
                 </div>
                 <div class="mb-3">
-                  <input type="text" placeholder="Company Name" id="inputcompanyname" class="shadow form-control form-control-lg">
+                  <input
+                    type="text"
+                    placeholder="Company Name"
+                    id="inputcompanyname"
+                    class="shadow form-control form-control-lg"
+                  />
                 </div>
                 <div class="mb-3">
-                  <textarea name="message" placeholder="message" id="message" rows="8" class="shadow form-control form-control-lg"></textarea>
+                  <textarea
+                    name="message"
+                    placeholder="message"
+                    id="message"
+                    rows="8"
+                    class="shadow form-control form-control-lg"
+                  ></textarea>
                 </div>
                 <div class="form-check form-switch">
-                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                  <label class="form-check-label text-black" for="flexSwitchCheckDefault">Do you need Appointment Date</label>
+                  <input
+                    class="form-check-input"
+                    type="checkbox"
+                    role="switch"
+                    id="flexSwitchCheckDefault"
+                  />
+                  <label
+                    class="form-check-label text-black"
+                    for="flexSwitchCheckDefault"
+                    >Do you need Appointment Date</label
+                  >
                 </div>
                 <div class="text-center d-grid mt-1">
                   <button class="btn btn-primary rounded-pill pt-3 pb-3">
@@ -120,11 +185,23 @@
       <div class="container">
         <div class="row">
           <!-- whatsup number -->
-          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div
+            class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex"
+          >
             <div class="contact-box__icon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-call" viewBox="0 0 24 24" stroke-width="1" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-phone-call"
+                viewBox="0 0 24 24"
+                stroke-width="1"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path
+                  d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
+                />
                 <path d="M15 7a2 2 0 0 1 2 2" />
                 <path d="M15 3a6 6 0 0 1 6 6" />
               </svg>
@@ -135,51 +212,73 @@
             </div>
           </div>
           <!-- Email -->
-          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div
+            class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex"
+          >
             <div class="contact-box__icon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-opened" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-mail-opened"
+                width="44"
+                height="44"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#2c3e50"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
                 <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
                 <path d="M3 19l6 -6" />
                 <path d="M15 13l6 6" />
               </svg>
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-                <path d="M15 7a2 2 0 0 1 2 2" />
-                <path d="M15 3a6 6 0 0 1 6 6" />
-              </svg>
             </div>
             <div class="contact-box __info">
-              <a href="" class="contact-box__info__title">info@nileagency.com</a>
+              <a href="" class="contact-box__info__title"
+                >info@nileagency.com</a
+              >
               <p class="contact-box __info__subtite">Online Support</p>
             </div>
           </div>
           <!-- Address -->
-          <div class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex">
+          <div
+            class="col-md-4 col-lg-4 contact-box pt-1 d-md-block d-lg-flex d-flex"
+          >
             <div class="contact-box__icon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-2" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-map-2"
+                width="44"
+                height="44"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#2c3e50"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                 <path d="M12 18.5l-3 -1.5l-6 3v-13l6 -3l6 3l6 -3v7.5" />
                 <path d="M9 4v13" />
                 <path d="M15 7v5.5" />
-                <path d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z" />
+                <path
+                  d="M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z"
+                />
                 <path d="M19 18v.01" />
-              </svg>
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-                <path d="M15 7a2 2 0 0 1 2 2" />
-                <path d="M15 3a6 6 0 0 1 6 6" />
               </svg>
             </div>
             <div class="contact-box __info">
-              <a href="" class="contact-box__info__title">Addis Abeba, Ethiopia</a>
+              <a href="" class="contact-box__info__title"
+                >Addis Abeba, Ethiopia</a
+              >
               <p class="contact-box __info__subtite">Bole Road</p>
             </div>
           </div>
         </div>
       </div>
-      <div class="footer-sm" style="background-color: #212121;">
+      <div class="footer-sm" style="background-color: #212121">
         <div class="container">
           <div class="row py-4 text-center text-white">
             <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
@@ -206,7 +305,15 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
