--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
@@ -43,12 +43,16 @@
               <a class="nav-link" href="./bootstrap/services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./bootstrap/AboutUs.html">About Us</a>
+              <a class="nav-link" href="./bootstrap/ContactUs.html"> Contact Us</a>
             </li>
           </ul>
-          <a href="./bootstrap/ContactUs.html">
+          <a
+            href="https://karem1035.github.io/ALX-Web-Development-Agency-Landing-Page/"
+            target="_blank"
+          >
             <button type="button" class="rounded-pill btn-rounded">
-              Contact Us
+              More Info
+
               <span>
                 <i class="fas fa-arrow-right"></i>
               </span>
@@ -654,5 +658,11 @@
         </div>
       </div>
     </footer>
+    <!-- CDN  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
